Version 1.1.0-CVS (?? ??? 2006)
 - Fixed bug 1439655: cannot save permissions of public access using UAC
 - Fixed bug 1438954: "Top menu" not working on view_entry.php
 - Fixed bug 1438952: Description & Site Extras not showing in pop-ups - CVS
 - Fixed bug 1416408: installation-wizard hang-up
 - Added updated UAC controls. This requires a databse change. Users can now
   grant permission to their own calendars.
 - Fixed bug 1435533: No headers if $LANGUAGE empty
 - Fixed bug 1435460: Extra '.txt' in includes/translate.php
 - Fixed bug 1435576: Duplicate selectors, almost, in styles.php
 - Fixed bug 1435793: Bug in admin.php
 - Fixed bug 1420372: Cannot add event to public calendar
 - Fixed bug 1434525: rss.php shows some events twice
 - Fixed bug 1424599: too many events in rss feed
 - Fixed bug 1433366: no reminders sent for repeated events without an end date
 - Fixed bug 1418124: Ending of recurrence: Fields not editable
 - Fixed bug 1430285: edit an event & time wrong
 - Fixed bug 1430670: Undefined Index in functions.php
 - Fixed bug 1430755: Lunar phases mssing when display all days selected
 - Fixed bug 1430562: translation-file cannot be updated properly
 - Fixed bug 1427479: Repated overlapping event (=2 days) will not be displayed
 - Fixed bug 1340790: Return to proper view after edit or other action
 - Fixed bug 1409552: Weekly repeating event shifts days
 - Fixed bug 1424413: calling upcoming.php as include doesn't work after 02/03/06
 - Moved all common images into images folder
 - Added optional lunar phases to month.php
 - Fixed bug 1410156: Pop ups displaying incorrectly in IE6
 - Fixed bug 1427068: SMTP mail doesn't accept admin authorization settings
 - Fixed bug 1425311: saving system setting requires 2x clicks at the save-button
 - Fixed bug 1425316: Event who needs 2 days cannot be translated correctly
 - Fixed bug 1424190: SERVER_URL short if WC not top level folder