@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Fixed bug 1434525: rss.php shows some events twice Second Pass
  - Fixed bug 1439655: cannot save permissions of public access using UAC
  - Fixed bug 1438954: "Top menu" not working on view_entry.php
  - Fixed bug 1438952: Description & Site Extras not showing in pop-ups - CVS
